# bluecrew

./: README.md  docker-compose-prod.yml  package-lock.json  package.json
server/: .env.example  pyproject.toml
server/api/: settings.py  urls.py
server/bingo/: actions.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  tokens.py  urls.py  utils.py  views.py
server/bingo/migrations/: 0001_initial.py  0002_challenge.py  0003_friendshiptable.py  0003_user_gender_identity_user_indigenous_identity.py  0004_alter_friendshiptable_unique_together.py  0005_rename_friendshiptable_friendship.py  0006_alter_friendship_unique_together_and_more.py  0007_bingogrid.py  0007_bingogrid_challengeinteraction_gridinteraction_and_more.py  0007_challengeinteraction.py  0007_user_gender_identity_user_indigenous_identity.py  0007_user_gender_identity_user_indigenous_identity_and_more.py  0008_alter_user_options_and_more.py  0008_remove_bingogrid_challenges_bingogrid_challenges.py  0009_bingogrid_gridinteraction.py  0009_merge_20250108_1135.py  0010_alter_challengeinteraction_completed_and_more.py  0010_nullablechallengeinteraction_and_more.py  0010_tileinteraction.py  0011_move_data_to_tileinteraction.py  0012_remove_gridinteraction_challenge_interactions_and_more.py  0013_remove_tileinteraction_unique_user_grid_challenege_and_more.py  0014_alter_tileinteraction_image.py  0014_alter_user_indigenous_identity.py  0015_alter_tileinteraction_image.py  0016_alter_tileinteraction_image.py  0017_alter_user_visibility.py  0018_alter_user_is_active.py  (+5 more)
(+107 files in other folders)
