[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Coders for Causes"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
freezegun = "^1.5.1"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
djangorestframework-simplejwt = "^5.3.1"
Pillow = "^10.0.0"
django-sortedm2m="^4.0.0"
django-resized = "^1.0.3"
django-q2 = "^1.7.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "6.1.0"
flake8-django = "^1.4"
mkdocs-material = "^9.6.4"
mkdocs = "^1.6.1"
mkdocs-mermaid2-plugin = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
